--- a/jsconfig.json
+++ b/jsconfig.json
@@ -17,6 +17,12 @@
 			],
 			"@utils/*": [
 				"./src/utils/*"
+			],
+			"@assets/*": [
+				"./src/assets/*"
+			],
+			"@components/*": [
+				"./src/components/*"
 			]
 		}
 	},
