--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "body-scroll-lock": "^4.0.0-beta.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
