--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy-es": "aws s3 sync out/ s3://evasalud-es.com --acl public-read",
-    "deploy-en": "aws s3 sync out/ s3://evasalud-en.com --acl public-read",
+    "deploy": "aws s3 sync dist/ s3://eva-salud --acl public-read",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
