--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
-    "body-scroll-lock": "^4.0.0-beta.0",
+    "aos": "2.3.4",
+    "body-scroll-lock": "4.0.0-beta.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "6.1.0",
     "react-responsive": "9.0.2",
     "react-router-dom": "6.13.0"
   },
